--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -6,5 +6,13 @@
     { "source": "/playlists",    "destination": "/api/playlists" },
     { "source": "/play/(.*)",    "destination": "/api/play/$1" },
     { "source": "/generate",     "destination": "/api/generate" }
+  ],
+  "redirects": [
+    { "source": "/auth/(.*)",    "destination": "/api/auth/$1", "permanent": false },
+    { "source": "/me",           "destination": "/api/me",       "permanent": false },
+    { "source": "/devices",      "destination": "/api/devices",  "permanent": false },
+    { "source": "/playlists",    "destination": "/api/playlists","permanent": false },
+    { "source": "/play/(.*)",    "destination": "/api/play/$1",  "permanent": false },
+    { "source": "/generate",     "destination": "/api/generate", "permanent": false }
   ]
 }
