--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,6 +4,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "react-router dev",
+		"dev:api": "vercel dev --cwd . --port 3000",
 		"typecheck": "react-router typegen && tsc --noEmit"
 	},
 	"dependencies": {
