--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,4 +1,5 @@
 {
+  "installCommand": "bun install --no-progress",
   "rewrites": [
     { "source": "/auth/(.*)",    "destination": "/api/auth/$1" },
     { "source": "/me",           "destination": "/api/me" },
