--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,6 +8,7 @@
 		"typecheck": "react-router typegen && tsc --noEmit"
 	},
 	"dependencies": {
+        "hono": "^4.5.0",
 		"@auth/core": "^0.37.2",
 		"@babel/generator": "^7.27.1",
 		"@chakra-ui/react": "2.8.2",
