Update Spotify integration: added FRONTEND_ORIGIN and improved auth handling

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,6 @@
-SPOTIFY_CLIENT_ID=4dadcbf0982443f48b2743adc6ae1226
+SPOTIFY_CLIENT_ID=your_dev_client_id
+SPOTIFY_CLIENT_SECRET=your_dev_secret
+FRONTEND_ORIGIN=http://localhost:4000
 
 # Optional: set a custom port for vercel dev if 3000 is busy
 # PORT=5177
