chore: files cleanup

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,5 @@
 SPOTIFY_CLIENT_ID=4dadcbf0982443f48b2743adc6ae1226
 SPOTIFY_CLIENT_SECRET=b751ca4df94049f7b0bff5784b62ac5b
 FRONTEND_ORIGIN=http://localhost:4000
+NODE_ENV=development
+NEXT_PUBLIC_API_URL=http://127.0.0.1:5177
