--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.18.1",
+    "@vercel/node": "^5.3.20",
     "autoprefixer": "^10.4.21",
     "babel-plugin-react-require": "^4.0.3",
     "fast-glob": "^3.3.3",
